deploy: 159f66015d8ba403c4531ac8daa881171c95fdd2

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -714,9 +714,9 @@
 <li><p>Met welke sneltoets kunt u in één keer naar uw persoonlijke map terugkeren?</p></li>
 <li><p>Met welke sneltoets kunt terug gaan naar de lokatie waar u was? En met welke weer vooruit (<em>Hint: dit heet “Ga terug” en “Ga verder”</em>)? Probeer dit uitvoerig uit. U opent de bestandsbeheerder en gaat naar <code>Documenten</code> en dan naar <code>Afbeeldingen/Schermafdrukken</code> en probeert de gevonden sneltoetsen uit.</p></li>
 </ol>
-<h1 id="schakelen-tussen-vensters-of-werkbladen">Schakelen tussen vensters of werkbladen</h1>
+<h1 id="werkbladen-en-vensters">Werkbladen en vensters</h1>
 <ol type="1">
-<li><p>Schakelen tussen twee toepassingen op twee werkbladen</p>
+<li><p>Wisselen tussen twee toepassingen op twee werkbladen</p>
 <ul>
 <li><p>Open Firefox met <code>SUPER+1</code></p></li>
 <li><p>Ga via activiteiten naar het werkblad rechts van het huidige werkblad</p>
@@ -724,15 +724,15 @@
 <li><code>SUPER</code>, <code>PageDown</code>, <code>SUPER</code></li>
 </ul></li>
 <li><p>Open bestandsbeheer <code>SUPER+E</code></p></li>
-<li><p>Schakel terug naar Firefox met <code>ALT+TAB</code></p>
+<li><p>Wissel terug naar Firefox met <code>ALT+TAB</code></p>
 <ul>
 <li>Hoe had u dit anders kunnen doen met een sneltoets?</li>
 </ul></li>
-<li><p>Schakel nu weer naar de bestandsbeheerder met <code>ALT+TAB</code></p></li>
+<li><p>Wissel nu weer naar de bestandsbeheerder met <code>ALT+TAB</code></p></li>
 <li><p>Sluit beide toepassingen met <code>ALT+F4</code></p>
 <ul>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
-<li><p>Schakel met <code>SUPER+1</code> naar Firefox</p></li>
+<li><p>Wissel met <code>SUPER+1</code> naar Firefox</p></li>
 <li><p>Sluit deze met <code>ALT+F4</code></p></li>
 </ul></li>
 </ul></li>
