--- a/samenvatting.html
+++ b/samenvatting.html
@@ -26,20 +26,20 @@
 <h1 id="notatie">Notatie</h1>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
 <h1 id="rondleiding-gnome">Rondleiding GNOME</h1>
-<ol type="1">
-<li><p>Je meldt je aan in GDM3 met account (gebruikersnaam=<code>tux</code>, wachtwoord=<code>tux</code>)</p></li>
+<ul>
+<li><p>Aanmelden in de displaymanager met account (gebruikersnaam=<code>tux</code>, wachtwoord=<code>tux</code>)</p></li>
 <li><p>Schermbeveiliging</p>
-<ol type="a">
+<ul>
 <li><p>Expres aanzetten (<code>SUPER+L</code>)</p></li>
 <li><p>Wachtwoord invoeren om verder te kunnen gaan</p></li>
-</ol></li>
+</ul></li>
 <li><p>Hulp openen (<code>SUPER+F1</code>)</p>
-<ol type="a">
+<ul>
 <li>Zoeken in Hulp met <code>CTRL+S</code>, zoeken op één pagina met <code>CTRL+F</code></li>
-</ol></li>
+</ul></li>
 <li><p>GNOME is een desktop manager</p></li>
 <li><p>Modi</p>
-<ol type="a">
+<ul>
 <li><p>Normale modus</p></li>
 <li><p>Activiteiten modus (<code>SUPER</code>)</p>
 <ul>
@@ -56,36 +56,36 @@
 <li><p>Toepassing slepen naar werkblad</p></li>
 <li><p>Dash aanpassen</p></li>
 </ul></li>
-</ol></li>
+</ul></li>
 <li><p>Dash</p>
-<ol type="a">
+<ul>
 <li><p>snelstarters voor veelgebruikte programma’s</p></li>
 <li><p>overzicht open programma’s</p></li>
 <li><p>Sneltoetsen <code>SUPER+1</code>, <code>SUPER+2</code>, … Om te openen en later focus terug te geven</p></li>
-</ol></li>
+</ul></li>
 <li><p>Bovenbalk</p>
-<ol type="a">
+<ul>
 <li><p>Activiteiten knop</p></li>
 <li><p>Toepassingen menu (later)</p></li>
 <li><p>Notificatie venster / Kalender (<code>SUPER+V</code>)</p></li>
 <li><p>Toegankelijkheidsmenu (indien er een toegankelijkheids optie aanstaat)</p></li>
 <li><p>Systeemmenu</p></li>
-</ol></li>
+</ul></li>
 <li><p>Notificatie venster (<code>SUPER+V</code>)</p>
 <ul>
 <li>kalender activeren met online-account</li>
 </ul></li>
 <li><p>Systeemmenu</p>
-<ol type="a">
+<ul>
 <li><p>Volume regeling</p></li>
 <li><p>Screenshots maken</p></li>
 <li><p>Instellingen</p></li>
 <li><p>Netwerk instellingen</p></li>
 <li><p>Vergrendeling</p></li>
 <li><p>Uitschakelen en afmelden</p></li>
-</ol></li>
+</ul></li>
 <li><p>Uitschakelen (<code>ALT+CTRL+DEL</code>)</p></li>
-</ol>
+</ul>
 <h1 id="toepassingen-starten-en-afsluiten">Toepassingen starten en afsluiten</h1>
 <h2 id="toepassingen-starten-op-zes-manieren">Toepassingen starten op zes manieren</h2>
 <ol type="1">
@@ -98,14 +98,14 @@
 <h4 id="dash">Dash</h4>
 <ol start="3" type="1">
 <li><p>Sneltoetsen: <code>SUPER+1</code>, <code>SUPER+2</code>, <code>SUPER+3</code>, etc.</p>
-<ol type="a">
+<ul>
 <li><p>Openen</p></li>
 <li><p>Focus terug te krijgen</p></li>
-</ol></li>
+</ul></li>
 <li><p>Klik op icon om toepassing te starten</p>
-<ol type="a">
+<ul>
 <li><code>CTRL</code> klik voor een nieuw venster</li>
-</ol></li>
+</ul></li>
 </ol>
 <h3 id="applicatie-modus-supera">Applicatie modus (<code>SUPER+A</code>)</h3>
 <ol start="5" type="1">
@@ -113,19 +113,19 @@
 <li><p>Slepen naar werkblad</p></li>
 </ol>
 <h2 id="toepassingsmenu-superf10">Toepassingsmenu (<code>SUPER+F10</code>)</h2>
-<ol type="1">
+<ul>
 <li><p>Wisselen tussen vensters</p></li>
 <li><p>Nieuw venster</p></li>
 <li><p>Details in Software</p></li>
 <li><p>Toepassing afsluiten <!-- of venster sluiten --></p></li>
-</ol>
+</ul>
 <h2 id="extra-venster-openen">Extra venster openen</h2>
-<ol type="1">
+<ul>
 <li><p>Via <code>CTRL</code> en muisklik op dash</p></li>
 <li><p>Via toepassingsmenu</p></li>
 <li><p>Via menu binnen applicatie</p></li>
 <li><p>Via slepen naar werkblad in applicatie modus</p></li>
-</ol>
+</ul>
 <h2 id="toepassingen-afsluiten-of-vensters-sluiten">Toepassingen afsluiten of vensters sluiten</h2>
 <p>Indien u het laatste open venster van een toepassing sluit, sluit u ook de toepassing af.</p>
 <h4 id="vensters-sluiten">Vensters sluiten</h4>
@@ -140,15 +140,15 @@
 <li><p>Via bestandsmenu van de toepassing</p></li>
 </ul>
 <h1 id="veel-gebruikte-toepassingen">Veel gebruikte toepassingen</h1>
-<ol type="a">
+<ul>
 <li><p>Internet browser: Firefox</p></li>
 <li><p>Bestandsbeheer</p></li>
-</ol>
-<!-- a.  LibreOffice -->
+</ul>
+<!-- -  LibreOffice -->
 <h2 id="internet-browser-firefox">Internet browser: Firefox</h2>
-<ol type="a">
+<ul>
 <li><p>Belangrijkste sneltoetsen</p>
-<ol type="i">
+<ul>
 <li><p>Nieuw tabblad openen <code>CTRL+T</code></p></li>
 <li><p>Tabblad sluiten <code>CTRL+W</code></p></li>
 <li><p>Focus naar adresbalk <code>CTRL+L</code></p></li>
@@ -159,10 +159,12 @@
 </ul></li>
 <li><p>Nieuw venster <code>CTRL+N</code></p></li>
 <li><p>Afsluiten <code>CTRL+Q</code></p></li>
-</ol></li>
+</ul></li>
 <li><p>Links openen op een nieuw tabblad</p>
-<ol type="i">
-<li><p><code>CTRL+SHIFT</code> met muisklik opent een link op een nieuw tabblad en schakelt naar het nieuw geopende tabblad</p></li>
+<ul>
+<li><code>CTRL+SHIFT</code> met muisklik opent een link op een nieuw tabblad en schakelt naar het nieuw geopende tabblad</li>
+</ul>
+<ol start="2" type="i">
 <li><p><code>CTRL</code> met muisklik opent een link op een nieuw tabblad</p></li>
 <li><p>Met <code>CTRL+TAB</code> wisselt u tussen de tabbladden. Met <code>CTRL+SHIFT+TAB</code> in tegengestelde richting.</p></li>
 </ol></li>
@@ -205,18 +207,18 @@
 </ul></li>
 </ul></li>
 <li><p>Essentiële extensies installeren</p>
-<ol type="i">
+<ul>
 <li><p><a href="https://addons.mozilla.org/nl/firefox/addon/adblock-for-youtube/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search">Adblocker for Youtube</a></p></li>
 <li><p><a href="https://addons.mozilla.org/nl/firefox/addon/adblocker-ultimate/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search">Adblocker Ultimate</a></p></li>
 <li><p><a href="https://addons.mozilla.org/nl/firefox/addon/i-dont-care-about-cookies/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search">I don’t care about cookies</a></p></li>
-</ol></li>
+</ul></li>
 <li><p>Hulp zoeken over Firefox</p>
 <ul>
 <li>Via hamburgermenu <img src="img/firefox-hamburgermenu.png" width="30" /> “Help &gt;”, “Hulp verkrijgen”</li>
 </ul></li>
-</ol>
+</ul>
 <h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
-<ol type="a">
+<ul>
 <li><p>Wat kunt u met de bestandsbeheerder?</p>
 <ul>
 <li><p>inhoud van map bekijken</p></li>
@@ -306,7 +308,7 @@
 </ul></li>
 </ul></li>
 <li><p>Archief bestand uitpakken</p>
-<ol type="1">
+<ul>
 <li><p>Kies “Uitpakken naar …” uit het context menu van het archief</p>
 <ul>
 <li><p>kies een map waarheen het archief moet worden uitgepakt</p></li>
@@ -314,7 +316,7 @@
 <li><p>geef aan of u wel of niet de uitgepakte bestanden in de bestandsbeheerder wenst te zien</p></li>
 </ul></li>
 <li><p>Kies “Uitpakken” uit het context menu van het archief. Dit pakt het archief uit in de map waar het archief staat.</p></li>
-</ol></li>
+</ul></li>
 <li><p>Archief bestand inzien</p>
 <ul>
 <li>dubbelklik zip bestand</li>
@@ -333,20 +335,20 @@
 <li><p>via hamburgermenu <img src="img/firefox-hamburgermenu.png" height="20" />, en dan “Sneltoetsen”</p></li>
 </ul></li>
 </ul></li>
-</ol>
-<h1 id="wisselen-tussen-vensters-of-werkbladen">Wisselen tussen vensters of werkbladen</h1>
-<ol type="1">
+</ul>
+<h1 id="werkbladen-en-vensters">Werkbladen en vensters</h1>
+<ul>
 <li><p>Wisselen tussen geopende toepassingen</p>
-<ol type="a">
-<li><p>Indien op zelfde werkblad door in het venster te klikken</p></li>
+<ul>
+<li><p>Indien op hetzelfde werkblad (en zichtbaar) door in het venster te klikken</p></li>
 <li><p>Activiteiten modus</p></li>
 <li><p><code>ALT+TAB</code>, <code>SUPER+TAB</code> wisselen tussen geopende toepassingen</p></li>
 <li><p><code>ALT+`</code> (alt backtick) wisselt tussen open vensters van de toepassing die nu de focus heeft</p></li>
 <li><p>Wisselen tussen vensters op actieve werkblad <code>ALT+ESC</code></p></li>
 <li><p>Focus bovenbalk <code>ALT+CTRL+TAB</code></p></li>
-</ol></li>
+</ul></li>
 <li><p>Werkbladen</p>
-<ol type="a">
+<ul>
 <li><p>Wat zijn werkbladen</p>
 <ul>
 <li>Groeperen van dingen die u doet</li>
@@ -369,9 +371,9 @@
 <ul>
 <li><code>SUPER+SHIFT+PageDown</code>, <code>SUPER+SHIFT+PageUp</code></li>
 </ul></li>
-</ol></li>
+</ul></li>
 <li><p>Vensterbeheer</p>
-<ol type="a">
+<ul>
 <li><p>Venstermenu <img src="img/venster-menu.png" height="200" /></p>
 <ul>
 <li><p>Context menu van titelbalk</p></li>
@@ -404,7 +406,7 @@
 <li><p><code>CTRL</code> met pijltjes kleine stapjes</p></li>
 </ul></li>
 </ul></li>
-<li><p>Verbergen</p>
+<li><p>Minimaliseren</p>
 <ul>
 <li><p><code>SUPER+H</code> of venstermenu</p></li>
 <li><p>Terughalen</p>
@@ -418,12 +420,12 @@
 <li><p>Links <code>SUPER+←</code></p></li>
 <li><p>Rechts <code>SUPER+→</code></p></li>
 </ul></li>
-</ol></li>
+</ul></li>
 <li><p>Achtergrond aanpassen</p>
 <ul>
 <li>Context menu bureaublad <img src="img/bureaublad-context-menu.png" width="200" /></li>
 </ul></li>
-</ol>
+</ul>
 <h1 id="instellingen-aanpassen">Instellingen aanpassen</h1>
 <ul>
 <li><p>Schermvergrendeling uitschakelen</p>
@@ -447,60 +449,64 @@
 </ul></li>
 </ul>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
-<ol type="1">
+<ul>
 <li><p>Installeren</p>
-<ol type="a">
+<ul>
 <li><p>Via Software</p>
-<ol type="i">
+<ul>
 <li><p>Bladeren</p></li>
 <li><p>Zoeken (gewoon beginnen met typen van de zoekterm)</p></li>
 <li><p>Installeren</p>
-<ol type="1">
+<ul>
 <li><p>VLC-player</p></li>
 <li><p>Chromium</p></li>
 <li><p>GIMP</p></li>
 <li><p>Inkscape</p></li>
 <li><p>Stellarium/KStars</p></li>
 <li><p>KDEnlive</p></li>
-</ol></li>
-</ol></li>
+</ul></li>
+</ul></li>
 <li><p>Vanuit een .deb bestand</p>
-<ol type="i">
+<ul>
 <li><p>Google chrome</p></li>
 <li><p>Edge</p></li>
 <li><p>Visual studio</p></li>
-</ol></li>
-</ol></li>
+</ul></li>
+</ul></li>
 <li><p>Standaardtoepassingen</p></li>
 <li><p><a href="https://help.gnome.org/users/gnome-help/stable/shell-apps-auto-start.html.en"><em>Opstarttoepassingen</em></a></p></li>
-</ol>
+</ul>
 <h1 id="online-accounts">Online accounts</h1>
-<ol type="1">
+<ul>
 <li><p>Online account toevoegen</p>
-<ol type="a">
+<ul>
 <li><p>Instellingen: voeg bij voorkeur een Google-account toe</p>
-<ol type="i">
+<ul>
 <li><p>toon kalender</p></li>
 <li><p>drive</p></li>
+</ul></li>
+</ul>
+<ol start="2" type="a">
+<li>helaas werkt Microsoft account <strong>niet</strong></li>
 </ol></li>
-<li><p>helaas werkt Microsoft account <strong>niet</strong></p></li>
-</ol></li>
-</ol>
+</ul>
 <h1 id="gebruikersbeheer">Gebruikersbeheer</h1>
-<ol type="1">
+<ul>
 <li><p>Wachtwoord wijzigen</p>
-<ol type="a">
-<li><p>Via instellingen</p></li>
-<li><p>Plaatje veranderen</p></li>
+<ul>
+<li>Via instellingen</li>
+</ul>
+<ol start="2" type="a">
+<li>Plaatje veranderen</li>
 </ol></li>
 <li><p>Gebruiker toevoegen</p></li>
 <li><p>Beheerdersrechten toekennen</p></li>
 <li><p>Automatisch aanmelden</p></li>
-</ol>
+</ul>
 <h2 id="bestanden">Bestanden</h2>
-<ol type="1">
+<ul>
 <li><p>Bestanden</p>
-<ol type="a">
+<ul>
 <li><p>geen drive-letters, maar <code>/</code>, <code>/</code> heet root (spreek uit als <strong>roet</strong>).</p></li>
 <li><p>geen backslashes, maar forward-slashes</p></li>
 <li><p><a href="https://tldp.org/LDP/Linux-Filesystem-Hierarchy/html/index.html">Filesystem Hierarchy Standard</a></p>
@@ -511,27 +517,27 @@
 </ol></li>
 <li><p><a href="https://nl.wikipedia.org/wiki/Homedirectory">thuismap</a> <code>/home/tux</code></p></li>
 <li><p>Starten <code>SUPER+4</code></p></li>
-</ol></li>
+</ul></li>
 <li><p>Backups maken</p>
-<ol type="a">
+<ul>
 <li><p>Open bestanden (<code>SUPER+4</code>)</p></li>
 <li><p>Rechtsklikken op map</p>
 <ol type="i">
 <li>Versturen …</li>
 <li>Inpakken …</li>
 </ol></li>
-</ol></li>
-</ol>
+</ul></li>
+</ul>
 <h1 id="speciale-tekens">Speciale tekens</h1>
-<ol type="1">
+<ul>
 <li><p>Euroteken invoeren</p>
-<ol type="a">
+<ul>
 <li><p>zoekvak ‘euro sign’</p></li>
 <li><p>via speciale tekens toepassing</p></li>
-<li><p><code>CTRL-SHIFT-U 20ac SPATIEBALK</code></p></li>
-</ol></li>
-<li><p>é (e accent) invoeren: <code>CTRL-SHIFT-U 00e9 SPATIEBALK</code></p></li>
+<li><p><code>CTRL+SHIFT+U 20ac SPATIEBALK</code></p></li>
+</ul></li>
+<li><p>é (e acute) invoeren: <code>CTRL+SHIFT+U 00e9 SPATIEBALK</code></p></li>
 <li><p><a href="https://help.gnome.org/users/gnome-help/stable/tips-specialchars.html.nl">GNOME tip speciale tekens</a></p></li>
-</ol>
+</ul>
 </body>
 </html>
