deploy: 1d029ae8ecf2c0c80eba5f0188ee5ab74530d2b3

--- a/samenvatting.html
+++ b/samenvatting.html
@@ -474,7 +474,20 @@
 </ul></li>
 </ul></li>
 <li><p>Standaardtoepassingen</p></li>
-<li><p><a href="https://help.gnome.org/users/gnome-help/stable/shell-apps-auto-start.html.en"><em>Opstarttoepassingen</em></a></p></li>
+<li><p>Standaardtoepassingen per bestandstype</p>
+<ul>
+<li><p>Context menu -&gt; “Openen met”</p></li>
+<li><p>Kies toepassing en zet schakelaar “Altijd gebruiken voor dit bestandstype”</p></li>
+</ul></li>
+</ul>
+<figure>
+<img src="img/bestanden-contextmenu-pdf-bestand.png" width="200" alt="" /><figcaption>Context menu van een PDF bestand</figcaption>
+</figure>
+<figure>
+<img src="img/bestanden-dialoogvenster-openen-met.png" width="200" alt="" /><figcaption>Dialoogvenster “Openen met”</figcaption>
+</figure>
+<ul>
+<li><a href="https://help.gnome.org/users/gnome-help/stable/shell-apps-auto-start.html.en"><em>Opstarttoepassingen</em></a></li>
 </ul>
 <h1 id="online-accounts">Online accounts</h1>
 <ul>
