deploy: b185d8c45b0d50118ee5158e2554fed0b1aa2f51

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!-- ## Linux beginners cursus
 ### GNOME op Debian 12
 ![](img/debian-logo.png){height=290px} -->
-<h2 id="onderdelen-van-de-cursus">Onderdelen van de cursus</h2>
+<h2 id="lesmateriaal">Lesmateriaal</h2>
 <ol type="1">
 <li><p><a href="https://github.com/slspeek/linux-beginners-cursus">Thuispagina</a></p></li>
 <li><p>Presentatie (<a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/presentatie.zip">download presentatie voor offline gebruik</a>)</p></li>
