deploy: 3441e4875df4960fbd83279da4bc4dfc007b15ad

--- a/samenvatting.html
+++ b/samenvatting.html
@@ -208,14 +208,30 @@
 </ul></li>
 <li><p>Essentiële extensies installeren</p>
 <ul>
-<li><p><a href="https://addons.mozilla.org/nl/firefox/addon/adblock-for-youtube/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search">Adblocker for Youtube</a></p></li>
-<li><p><a href="https://addons.mozilla.org/nl/firefox/addon/adblocker-ultimate/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search">Adblocker Ultimate</a></p></li>
-<li><p><a href="https://addons.mozilla.org/nl/firefox/addon/i-dont-care-about-cookies/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search">I don’t care about cookies</a></p></li>
+<li><p><a href="https://addons.mozilla.org/nl/firefox/addon/adblock-for-youtube/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search"><em>Adblocker for Youtube</em></a></p></li>
+<li><p><a href="https://addons.mozilla.org/nl/firefox/addon/adblocker-ultimate/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search"><em>Adblocker Ultimate</em></a></p></li>
+<li><p><a href="https://addons.mozilla.org/nl/firefox/addon/i-dont-care-about-cookies/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search"><em>I don’t care about cookies</em></a></p></li>
 </ul></li>
 <li><p>Hulp zoeken over Firefox</p>
 <ul>
 <li>Via hamburgermenu <img src="img/firefox-hamburgermenu.png" width="30" /> “Help &gt;”, “Hulp verkrijgen”</li>
 </ul></li>
+</ul>
+<h1 id="bestanden">Bestanden</h1>
+<h2 id="bestanden-op-linux">Bestanden op Linux</h2>
+<ul>
+<li><p>geen drive-letters, maar <code>/</code>, <code>/</code> heet root (spreek uit als <strong>roet</strong>).</p>
+<ul>
+<li>aankoppelpunten zijn (lege) mappen</li>
+</ul></li>
+<li><p>geen backslashes, maar forward-slashes</p></li>
+<li><p><a href="https://tldp.org/LDP/Linux-Filesystem-Hierarchy/html/index.html"><em>Filesystem Hierarchy Standard</em></a></p>
+<ul>
+<li><p><code>/home</code> hieronder staan alle thuismappen</p></li>
+<li><p><code>/usr/bin</code> hieronder staan de toepassingen</p></li>
+<li><p><code>/media</code> hieronder leven alle aankoppelbare media zoals USB-sticks</p></li>
+</ul></li>
+<li><p><a href="https://nl.wikipedia.org/wiki/Homedirectory"><em>thuismap</em></a> van gebruiker <code>tux</code> is <code>/home/tux</code></p></li>
 </ul>
 <h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
 <ul>
@@ -448,6 +464,76 @@
 <li><p>Instellingen -&gt; Schermen -&gt; Nachtlicht</p></li>
 </ul></li>
 </ul>
+<h2 id="speciale-tekens-invoeren">Speciale tekens invoeren</h2>
+<ul>
+<li><p>Samensteltoets</p></li>
+<li><p>Zoekvak</p></li>
+<li><p>Tekens en symbolen</p></li>
+</ul>
+<p>Zie vooral ook deze webpagina <a href="https://help.gnome.org/users/gnome-help/stable/tips-specialchars.html.nl"><em>GNOME tip speciale tekens</em></a></p>
+<h3 id="speciale-tekens-via-samensteltoets">Speciale tekens via samensteltoets</h3>
+<ul>
+<li><p>Toetsenbord</p>
+<ul>
+<li><p>Invoer voor speciale tekens</p>
+<ul>
+<li><p>Samensteltoets op rechter alt zetten</p></li>
+<li><p><a href="https://en.wikipedia.org/wiki/Compose_key#Common_compose_combinations"><em>Voor combinaties zie deze webpagina</em></a></p></li>
+<li><p>het euroteken € krijgt u door</p>
+<ul>
+<li><p><code>COMPOSE = c</code></p></li>
+<li><p><code>SUPER euro sign ↓ ENTER</code></p></li>
+<li><p><code>CTRL+SHIFT+u 20AC SPATIEBALK</code></p></li>
+</ul></li>
+</ul></li>
+</ul></li>
+</ul>
+<h3 id="speciale-tekens-via-het-zoekvak">Speciale tekens via het zoekvak</h3>
+<p>Voor invoeren via het zoekveld kunt de volgende namen gebruiken</p>
+<table>
+<thead>
+<tr class="header">
+<th style="text-align: center;">Teken</th>
+<th style="text-align: left;">Naam</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: center;">é</td>
+<td style="text-align: left;">Acute</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">è</td>
+<td style="text-align: left;">Grave</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">ë</td>
+<td style="text-align: left;">Diaeresis</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">ē</td>
+<td style="text-align: left;">Macron</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">ê</td>
+<td style="text-align: left;">Circumflex</td>
+</tr>
+</tbody>
+</table>
+<h3 id="speciale-tekens-via-tekens-en-symbolen">Speciale tekens via “Tekens en symbolen”</h3>
+<p><img src="img/tekens-symbolen-icon.png" width="60" /></p>
+<ul>
+<li><code>SUPER sym ENTER</code></li>
+</ul>
+<h2 id="online-account-toevoegen">Online account toevoegen</h2>
+<ul>
+<li><p>Instellingen: voeg bij voorkeur een Google-account toe</p>
+<ul>
+<li><p>toon kalender</p></li>
+<li><p>drive</p></li>
+</ul></li>
+</ul>
+<p><strong>N.B.</strong> Microsoft account werkt <strong>niet</strong>.</p>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ul>
 <li><p>Installeren</p>
@@ -488,69 +574,6 @@
 </figure>
 <ul>
 <li><a href="https://help.gnome.org/users/gnome-help/stable/shell-apps-auto-start.html.en"><em>Opstarttoepassingen</em></a></li>
-</ul>
-<h1 id="online-accounts">Online accounts</h1>
-<ul>
-<li><p>Online account toevoegen</p>
-<ul>
-<li><p>Instellingen: voeg bij voorkeur een Google-account toe</p>
-<ul>
-<li><p>toon kalender</p></li>
-<li><p>drive</p></li>
-</ul></li>
-</ul>
-<ol start="2" type="a">
-<li>helaas werkt Microsoft account <strong>niet</strong></li>
-</ol></li>
-</ul>
-<h1 id="gebruikersbeheer">Gebruikersbeheer</h1>
-<ul>
-<li><p>Wachtwoord wijzigen</p>
-<ul>
-<li>Via instellingen</li>
-</ul>
-<ol start="2" type="a">
-<li>Plaatje veranderen</li>
-</ol></li>
-<li><p>Gebruiker toevoegen</p></li>
-<li><p>Beheerdersrechten toekennen</p></li>
-<li><p>Automatisch aanmelden</p></li>
-</ul>
-<h2 id="bestanden">Bestanden</h2>
-<ul>
-<li><p>Bestanden</p>
-<ul>
-<li><p>geen drive-letters, maar <code>/</code>, <code>/</code> heet root (spreek uit als <strong>roet</strong>).</p></li>
-<li><p>geen backslashes, maar forward-slashes</p></li>
-<li><p><a href="https://tldp.org/LDP/Linux-Filesystem-Hierarchy/html/index.html">Filesystem Hierarchy Standard</a></p>
-<ol type="i">
-<li><code>/home</code></li>
-<li><code>/usr/bin</code></li>
-<li><code>/media</code></li>
-</ol></li>
-<li><p><a href="https://nl.wikipedia.org/wiki/Homedirectory">thuismap</a> <code>/home/tux</code></p></li>
-<li><p>Starten <code>SUPER+4</code></p></li>
-</ul></li>
-<li><p>Backups maken</p>
-<ul>
-<li><p>Open bestanden (<code>SUPER+4</code>)</p></li>
-<li><p>Rechtsklikken op map</p>
-<ol type="i">
-<li>Versturen …</li>
-<li>Inpakken …</li>
-</ol></li>
-</ul></li>
-</ul>
-<h1 id="speciale-tekens">Speciale tekens</h1>
-<ul>
-<li><p>Euroteken invoeren</p>
-<ul>
-<li><p>zoekvak ‘euro sign’</p></li>
-<li><p>via speciale tekens toepassing</p></li>
-<li><p><code>CTRL+SHIFT+U 20ac SPATIEBALK</code></p></li>
-</ul></li>
-<li><p>é (e acute) invoeren: <code>CTRL+SHIFT+U 00e9 SPATIEBALK</code></p></li>
-<li><p><a href="https://help.gnome.org/users/gnome-help/stable/tips-specialchars.html.nl">GNOME tip speciale tekens</a></p></li>
 </ul>
 </body>
 </html>
