--- a/samenvatting.html
+++ b/samenvatting.html
@@ -220,18 +220,19 @@
 <h1 id="bestanden">Bestanden</h1>
 <h2 id="bestanden-op-linux">Bestanden op Linux</h2>
 <ul>
-<li><p>geen drive-letters, maar <code>/</code>, <code>/</code> heet root (spreek uit als <strong>roet</strong>).</p>
+<li><p>fysieke volumes (indien er meerdere disks zijn)</p>
 <ul>
-<li>aankoppelpunten zijn (lege) mappen</li>
+<li><p>geen drive-letters <code>C:</code>, <code>D:</code> etc.</p></li>
+<li><p>aankoppelpunten zijn (lege) mappen (bijvoorbeeld <code>/mnt</code>, <code>/media/&lt;XXXX&gt;</code>)</p></li>
 </ul></li>
-<li><p>geen backslashes, maar forward-slashes</p></li>
+<li><p>geen backslashes (<code>\</code>), maar forward-slashes (<code>/</code>) als map scheidingsteken</p></li>
 <li><p><a href="https://tldp.org/LDP/Linux-Filesystem-Hierarchy/html/index.html"><em>Filesystem Hierarchy Standard</em></a></p>
 <ul>
 <li><p><code>/home</code> hieronder staan alle thuismappen</p></li>
 <li><p><code>/usr/bin</code> hieronder staan de toepassingen</p></li>
 <li><p><code>/media</code> hieronder leven alle aankoppelbare media zoals USB-sticks</p></li>
 </ul></li>
-<li><p><a href="https://nl.wikipedia.org/wiki/Homedirectory"><em>thuismap</em></a> van gebruiker <code>tux</code> is <code>/home/tux</code></p></li>
+<li><p><a href="https://nl.wikipedia.org/wiki/Homedirectory"><em>thuismap</em></a> van gebruiker <code>tux</code> is <code>/home/tux</code>. Deze map heet “Persoonlijke map” in de bestandsbeheerder.</p></li>
 </ul>
 <h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
 <ul>
