deploy: 330919998f2bb1274ca9dc3cc3f7dd85be6da5a5

--- a/samenvatting.html
+++ b/samenvatting.html
@@ -238,7 +238,7 @@
 <ul>
 <li><p>Wat kunt u met de bestandsbeheerder?</p>
 <ul>
-<li><p>inhoud van map bekijken</p></li>
+<li><p>inhoud van een map bekijken</p></li>
 <li><p>bestanden of mappen verplaatsen, kopiëren en in de prullenbak gooien</p></li>
 <li><p>zoeken in bestanden</p></li>
 <li><p>archieven aanmaken, inzien en uitpakken</p></li>
@@ -354,8 +354,7 @@
 </ul></li>
 </ul>
 <h1 id="werkbladen-en-vensters">Werkbladen en vensters</h1>
-<ul>
-<li><p>Wisselen tussen geopende toepassingen</p>
+<h2 id="wisselen-tussen-geopende-toepassingen">Wisselen tussen geopende toepassingen</h2>
 <ul>
 <li><p>Indien op hetzelfde werkblad (en zichtbaar) door in het venster te klikken</p></li>
 <li><p>Activiteiten modus</p></li>
@@ -363,8 +362,8 @@
 <li><p><code>ALT+`</code> (alt backtick) wisselt tussen open vensters van de toepassing die nu de focus heeft</p></li>
 <li><p>Wisselen tussen vensters op actieve werkblad <code>ALT+ESC</code></p></li>
 <li><p>Focus bovenbalk <code>ALT+CTRL+TAB</code></p></li>
-</ul></li>
-<li><p>Werkbladen</p>
+</ul>
+<h2 id="werkbladen">Werkbladen</h2>
 <ul>
 <li><p>Wat zijn werkbladen</p>
 <ul>
@@ -388,8 +387,8 @@
 <ul>
 <li><code>SUPER+SHIFT+PageDown</code>, <code>SUPER+SHIFT+PageUp</code></li>
 </ul></li>
-</ul></li>
-<li><p>Vensterbeheer</p>
+</ul>
+<h2 id="vensterbeheer">Vensterbeheer</h2>
 <ul>
 <li><p>Venstermenu <img src="img/venster-menu.png" height="200" /></p>
 <ul>
@@ -427,43 +426,38 @@
 <ul>
 <li><p><code>SUPER+H</code> of venstermenu</p></li>
 <li><p>Terughalen</p>
-<ul>
-<li><p>Erop klikken in activiteiten modus</p></li>
-<li><p><code>ALT+TAB</code>, <code>SUPER+TAB</code></p></li>
-</ul></li>
+<pre><code>  - Erop klikken in activiteiten modus
+
+  - ```ALT+TAB```, ```SUPER+TAB```</code></pre></li>
 </ul></li>
 <li><p>Helft scherm gebruiken</p>
 <ul>
 <li><p>Links <code>SUPER+←</code></p></li>
 <li><p>Rechts <code>SUPER+→</code></p></li>
 </ul></li>
-</ul></li>
-<li><p>Achtergrond aanpassen</p>
+</ul>
+<h2 id="achtergrond-aanpassen">Achtergrond aanpassen</h2>
 <ul>
 <li>Context menu bureaublad <img src="img/bureaublad-context-menu.png" width="200" /></li>
-</ul></li>
 </ul>
-<h1 id="instellingen-aanpassen">Instellingen aanpassen</h1>
-<ul>
-<li><p>Schermvergrendeling uitschakelen</p>
+<h1 id="instellingen">Instellingen</h1>
+<h2 id="schermvergrendeling-uitschakelen">Schermvergrendeling uitschakelen</h2>
 <ul>
 <li>Instellingen -&gt; Privacy -&gt; Scherm -&gt; Automatische schermvergrendeling</li>
-</ul></li>
 </ul>
 <figure>
 <img src="img/instellingen-privacy-scherm.png" width="400" alt="" /><figcaption>Schermvergrendeling in de instellingen toepassing</figcaption>
 </figure>
+<h2 id="toegankelijkheid">Toegankelijkheid</h2>
 <ul>
-<li><p>Toegankelijkheid</p>
-<ul>
+<li><p>Instellingen -&gt; Toegankelijkheid</p></li>
 <li><p>Menu in bovenbalk <img src="img/toegankelijkheidsmenu.png" width="30" /></p></li>
 <li><p>Grote letters</p></li>
-</ul></li>
-<li><p>Nachtlicht</p>
+</ul>
+<h2 id="nachtlicht">Nachtlicht</h2>
 <ul>
-<li><p>via Systeemmenu</p></li>
+<li><p>Via systeemmenu <img src="img/systeem-menu-gesloten.png" height="25" /></p></li>
 <li><p>Instellingen -&gt; Schermen -&gt; Nachtlicht</p></li>
-</ul></li>
 </ul>
 <h2 id="speciale-tekens-invoeren">Speciale tekens invoeren</h2>
 <ul>
@@ -474,10 +468,7 @@
 <p>Zie vooral ook deze webpagina <a href="https://help.gnome.org/users/gnome-help/stable/tips-specialchars.html.nl"><em>GNOME tip speciale tekens</em></a></p>
 <h3 id="speciale-tekens-via-samensteltoets">Speciale tekens via samensteltoets</h3>
 <ul>
-<li><p>Toetsenbord</p>
-<ul>
-<li><p>Invoer voor speciale tekens</p>
-<ul>
+<li><p>Instellingen -&gt; Toetsenbord -&gt; Invoer voor speciale tekens</p></li>
 <li><p>Samensteltoets op rechter alt zetten</p></li>
 <li><p><a href="https://en.wikipedia.org/wiki/Compose_key#Common_compose_combinations"><em>Voor combinaties zie deze webpagina</em></a></p></li>
 <li><p>het euroteken € krijgt u door</p>
@@ -485,8 +476,6 @@
 <li><p><code>COMPOSE = c</code></p></li>
 <li><p><code>SUPER euro sign ↓ ENTER</code></p></li>
 <li><p><code>CTRL+SHIFT+u 20AC SPATIEBALK</code></p></li>
-</ul></li>
-</ul></li>
 </ul></li>
 </ul>
 <h3 id="speciale-tekens-via-het-zoekvak">Speciale tekens via het zoekvak</h3>
@@ -536,36 +525,29 @@
 </ul>
 <p><strong>N.B.</strong> Microsoft account werkt <strong>niet</strong>.</p>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
-<ul>
-<li><p>Installeren</p>
-<ul>
-<li><p>Via Software</p>
+<h2 id="installeren">Installeren</h2>
+<h3 id="via-software">Via Software <img src="img/software-icon.png" height="25" /></h3>
 <ul>
 <li><p>Bladeren</p></li>
 <li><p>Zoeken (gewoon beginnen met typen van de zoekterm)</p></li>
-<li><p>Installeren</p>
+<li><p>Installeren</p></li>
+</ul>
+<h3 id="vanuit-een-.deb-bestand">Vanuit een .deb bestand</h3>
 <ul>
-<li><p>VLC-player</p></li>
-<li><p>Chromium</p></li>
-<li><p>GIMP</p></li>
-<li><p>Inkscape</p></li>
-<li><p>Stellarium/KStars</p></li>
-<li><p>KDEnlive</p></li>
-</ul></li>
-</ul></li>
-<li><p>Vanuit een .deb bestand</p>
-<ul>
-<li><p>Google chrome</p></li>
-<li><p>Edge</p></li>
-<li><p>Visual studio</p></li>
-</ul></li>
-</ul></li>
-<li><p>Standaardtoepassingen</p></li>
-<li><p>Standaardtoepassingen per bestandstype</p>
+<li><p>download het .deb bestand</p></li>
+<li><p>open het in bestandsbeheerder</p></li>
+<li><p>via context menu openen met Software</p></li>
+<li><p>klik installeren</p></li>
+</ul>
+<!-- - Google chrome
+
+- Visual studio -->
+<h3 id="standaardtoepassingen">Standaardtoepassingen</h3>
+<p><img src="img/standaardtoepassingen.png" /></p>
+<h3 id="standaardtoepassing-per-bestandstype">Standaardtoepassing per bestandstype</h3>
 <ul>
 <li><p>Context menu -&gt; “Openen met”</p></li>
 <li><p>Kies toepassing en zet schakelaar “Altijd gebruiken voor dit bestandstype”</p></li>
-</ul></li>
 </ul>
 <figure>
 <img src="img/bestanden-contextmenu-pdf-bestand.png" width="200" alt="" /><figcaption>Context menu van een PDF bestand</figcaption>
@@ -573,8 +555,7 @@
 <figure>
 <img src="img/bestanden-dialoogvenster-openen-met.png" width="200" alt="" /><figcaption>Dialoogvenster “Openen met”</figcaption>
 </figure>
-<ul>
-<li><a href="https://help.gnome.org/users/gnome-help/stable/shell-apps-auto-start.html.en"><em>Opstarttoepassingen</em></a></li>
-</ul>
+<h3 id="opstarttoepassingen"><a href="https://help.gnome.org/users/gnome-help/stable/shell-apps-auto-start.html.en"><em>Opstarttoepassingen</em></a></h3>
+<p><img src="img/opstarttoepassingen.png" /></p>
 </body>
 </html>
