deploy: d41fcfc54a289ded69d608d638251fa089fd7410

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -739,6 +739,7 @@
 </ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
+<li><p>Welke toepassing moet u starten om updates uit te voeren?</p></li>
 <li><p>Standaard applicatie wijzigen</p>
 <ol type="a">
 <li>Web naar Chromium</li>
