--- a/samenvatting.html
+++ b/samenvatting.html
@@ -162,12 +162,10 @@
 </ul></li>
 <li><p>Links openen op een nieuw tabblad</p>
 <ul>
-<li><code>CTRL+SHIFT</code> met muisklik opent een link op een nieuw tabblad en schakelt naar het nieuw geopende tabblad</li>
-</ul>
-<ol start="2" type="i">
+<li><p><code>CTRL+SHIFT</code> met muisklik opent een link op een nieuw tabblad en schakelt naar het nieuw geopende tabblad</p></li>
 <li><p><code>CTRL</code> met muisklik opent een link op een nieuw tabblad</p></li>
 <li><p>Met <code>CTRL+TAB</code> wisselt u tussen de tabbladden. Met <code>CTRL+SHIFT+TAB</code> in tegengestelde richting.</p></li>
-</ol></li>
+</ul></li>
 <li><p>Plaatje openen in nieuw tabblad</p>
 <ul>
 <li>Klik rechts op plaatje, om het context menu te openen en kies “Afbeelding openen in nieuw tabblad”</li>
@@ -406,7 +404,7 @@
 <li><p><code>ALT+F7</code> of venstermenu</p>
 <ul>
 <li><p>muis bewegen, klik is plaatsen</p></li>
-<li><p><code>SHIFT</code> met pijltjes grote stappen</p></li>
+<li><p><code>SHIFT</code> met pijltjes direct naar de rand</p></li>
 <li><p>pijltjes gewone stappen</p></li>
 <li><p><code>CTRL</code> met pijltjes kleine stapjes</p></li>
 </ul></li>
@@ -417,7 +415,7 @@
 <li><p><code>ALT+F8</code> of venstermenu</p>
 <ul>
 <li><p>muis bewegen, klik is nieuwe grootte accepteren</p></li>
-<li><p><code>SHIFT</code> met pijltjes grote stappen</p></li>
+<li><p><code>SHIFT</code> met pijltjes direct tot de rand</p></li>
 <li><p>pijltjes gewone stappen</p></li>
 <li><p><code>CTRL</code> met pijltjes kleine stapjes</p></li>
 </ul></li>
@@ -515,9 +513,14 @@
 <ul>
 <li><code>SUPER sym ENTER</code></li>
 </ul>
+<h2 id="gebruikers-instellingen">Gebruikers instellingen</h2>
+<ul>
+<li><p>Plaatje wijzigen</p></li>
+<li><p>Eigennaam wijzigen</p></li>
+</ul>
 <h2 id="online-account-toevoegen">Online account toevoegen</h2>
 <ul>
-<li><p>Instellingen: voeg bij voorkeur een Google-account toe</p>
+<li><p>Instellingen -&gt; Online accounts -&gt; Google</p>
 <ul>
 <li><p>toon kalender</p></li>
 <li><p>drive</p></li>
@@ -525,6 +528,11 @@
 </ul>
 <p><strong>N.B.</strong> Microsoft account werkt <strong>niet</strong>.</p>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
+<h2 id="updates-uitvoeren">Updates uitvoeren</h2>
+<ul>
+<li><p>Downloaden in Software <img src="img/software-icon.png" height="25" /></p></li>
+<li><p>Herstarten en bijwerken</p></li>
+</ul>
 <h2 id="installeren">Installeren</h2>
 <h3 id="via-software">Via Software <img src="img/software-icon.png" height="25" /></h3>
 <ul>
