--- a/vensters-en-werkbladen.html
+++ b/vensters-en-werkbladen.html
@@ -211,7 +211,7 @@
 <p>muis bewegen, klik is plaatsen</p>
 </li>
 <li>
-<p><code>SHIFT</code> met pijltjes grote stappen</p>
+<p><code>SHIFT</code> met pijltjes direct naar de rand</p>
 </li>
 <li>
 <p>pijltjes gewone stappen</p>
@@ -240,7 +240,7 @@
 <p>muis bewegen, klik is nieuwe grootte accepteren</p>
 </li>
 <li>
-<p><code>SHIFT</code> met pijltjes grote stappen</p>
+<p><code>SHIFT</code> met pijltjes direct tot de randen</p>
 </li>
 <li>
 <p>pijltjes gewone stappen</p>
